--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
   
 
   <!-- Details Box  --> 
-  <main class="et-main">
-    <section class="et-slide fixed-height" id="details">
-      <h1>Event Details</h1>
-      <div class="details-box">
-        <h2>An All-India CodeFest</h2>
-        <p>Date of Event: 1 January - 25 January, 2025 <br>
+<main class="et-main">
+  <section class="et-slide parallax fixed-height" id="details">
+    <h1>Event Details</h1>
+    <div class="details-box">
+      <h2>An All-India CodeFest</h2>
+      <p>Date of Event: 1 January - 25 January, 2025 <br>
         Location: Online (Award Ceremony: MLSI School, Mumbai) <br>
-        Registrations: Open till 20 December, 2024 <br> </p>
-        <p></p>
-      </div>
-    </section>
+        Registrations: Open till 20 December, 2024 <br> 
+      </p>
+    </div>
+  </section>
+</main>
+
 
     <!-- Themes  --> 
     <section class="et-slide fixed-height" id="themes">
