--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@
             <p>Name: Ziaan Lalani</p>
             <p>Role: Core Team</p>
           </div>
+          
+          <div class="team-member">
+            <!-- <img src="assets/team-member2.jpg" alt="Team Member 2"> -->
+            <p>Name: Pearl Parwani </p>
+            <p>Role: Head of Media </p>
+          </div>
+          <div class="team-member">
+            <!-- <img src="assets/team-member2.jpg" alt="Team Member 2"> -->
+            <p>Name: Zoya Moossharma </p>
+            <p>Role: Media Team </p>
+          </div>
+
           <!-- Add more team members as needed -->
         </div>
       </div>
