--- a/index.html
+++ b/index.html
@@ -303,6 +303,11 @@
             <p>Name: Zoya Moossharma </p>
             <p>Role: Media Team </p>
           </div>
+          <div class="team-member">
+            <!-- <img src="assets/team-member2.jpg" alt="Team Member 2"> -->
+            <p>Name: Vedha Kaurani </p>
+            <p>Role: Media Team </p>
+          </div>
         </div>
       </div>
     </div>
