--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <section class="et-hero-tabs">
     <img class="logo" src="./Assets/nexus-logo-nb.png" alt="Nexus 2025 All-India Online CodeFest Banner" />
     <div class="typewriter-container">
-        <h3 class="heading-subtitle didact-gothic-regular typewriter">INSPIRE. INNOVATE. IGNITE.</h3>
+        <h3 class="heading-subtitle didact-gothic-regular">INSPIRE. INNOVATE. IGNITE.</h3>
         </div>  
     <div class="et-hero-tabs-container">
       <a class="et-hero-tab" href="#details">DETAILS</a>
@@ -78,6 +78,7 @@
       <p>Date of Event: 1 January - 25 January, 2025 <br>
         Location: Online (Award Ceremony: MLSI School, Mumbai) <br>
         Registrations: Open till 20 December, 2024 <br> 
+        <a class="registration-link" href="https://forms.gle/vrWVe4FEg19njR5q8"> CLICK TO REGISTER NOW! </a>
       </p>
     </div>
   </section>
