--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="card">
               <div class="info">
                 <h3 class="title"> 30 January 2025</h3>
-                <p> Award Ceremony at Mount Litera School International, Mumbai </p>
+                <p> Award Ceremony (Online) </p>
               </div>
             </div>
           </div>
