--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     <h2 class="didact-gothic-regular">MEET THE TEAM</h2>
     <p>Website by: Team Nexus</p>
     <p>Contact: <a href="mailto:codefest@example.com">nexus@mlsi.in</a></p>
+    <p>Follow us <a href="https://www.instagram.com/nexus_codefest?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">@nexus_codefest</a></p>
 
     <!-- Social Media Icons -->
     <div class="social-icons">
