--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <div class="social-icons">
       <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
       <a href="https://www.twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/nexus_codefest?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram"> @nexus_codefest <i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     </div>
 
@@ -331,7 +331,7 @@
             <li>Harassment, discrimination, and inappropriate behavior are strictly prohibited.</li>
             <li>Failure to adhere to these conditions will result in immediate disqualification.</li>
           </ul>
-          <p>For any questions, please contact <a href="mailto:codefest@mlsi.in">codefest@mlsi.in</a>.</p>
+          <p>For any questions, please contact <a href="mailto:nexus.codefest@mlsi.in">nexus.codefest@mlsi.in</a>.</p>
         </div>
       </div>
     </div>
