--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Nexus 2025 is an all-India online codefest for young innovators (grades 6-12) to collaborate, innovate, and solve global challenges with a focus on UN SDGs. Register today for a rewarding coding experience.">
+  <meta name="description" content="Nexus 2025 is an all-India online tech competition hosted by Mount Litera School International for young innovators (grades 6-12) to collaborate, innovate, and solve global challenges with a focus on UN SDGs. Register today for a rewarding coding experience.">
   <meta data-react-helmet="true" name="description" content="Nexus 2025 | All-India CodeFest: Where young minds code, create, and solve global challenges. Themes centered around the UN SDGs, fostering innovation and creativity in India's brightest young developers.">
   <meta property="og:title" content="Nexus 2025 | All-India Online CodeFest">
-  <meta property="og:description" content="Join the all-India online codefest for young innovators focused on solving global challenges. Nexus 2025 empowers students to create, code, and innovate.">
+  <meta property="og:description" content="Join the all-India online codefest for young innovators focused on solving global challenges. Nexus empowers students to create, code, and innovate.">
   <meta property="og:image" content="https://i.postimg.cc/Hnrj9L8T/nexus-logo-full.png">
   <meta property="og:url" content="https://nexuscodefest.in">
 
@@ -16,7 +16,7 @@
   <meta data-react-helmet="true" name="twitter:description" content="Nexus 2025 is an all-India online codefest, bringing together young innovators from grades 6-12 across the country. With themes inspired by the UN SDGs, this virtual event empowers participants to innovate, collaborate, and solve global challenges through technology, all from the comfort of their homes.">
 
 
-  <title>Nexus 2025 | All-India Online CodeFest | Innovate, Collaborate, Solve Global Challenges</title>
+  <title>Nexus 2025 | All-India Online CodeFest </title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- font -->
@@ -77,7 +77,7 @@
       <h2>An All-India CodeFest</h2>
       <p>Date of Event: 1 January - 25 January, 2025 <br>
         Location: Online (Award Ceremony: MLSI School, Mumbai) <br>
-        Registrations: Open till 20 December, 2024 <br> 
+        <a class="registration-link" href="https://drive.google.com/file/d/1dWYEJ_Q5wTYQytmDynOBLaxrH4Amonz_/view?usp=sharing"> View the CodeFest Orientation clip! </a>
         <a class="registration-link" href="https://forms.gle/vrWVe4FEg19njR5q8"> CLICK TO REGISTER NOW! </a>
       </p>
     </div>
@@ -234,6 +234,14 @@
               <p>Hardware projects are allowed for the final category, Impact Incubator. However, please note that the materials required must be sourced on your own. </p>
             </div>
           </div>
+
+          <div class="faq-item">
+            <button class="faq-question">Are visual (block based) coding platforms like MIT App Inventor allowed?</button>
+            <div class="faq-answer">
+              <p>Block-based platforms like MIT App Inventor are only permitted for game/story development. They are not allowed for website/app development or the Impact Incubator (doesn't require coding). For more information about what platforms are specifically allowed for each category, please feel free to contact us via email.</p>
+            </div>
+          </div>
+
 
 
         </div>
