--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <div class="details-box">
       <h2>An All-India CodeFest</h2>
       <p>Date of Event: 1 January - 25 January, 2025 <br>
-        Location: Online (Award Ceremony: MLSI School, Mumbai) <br>
+        Location: Online <br>
+        Hosted by <a href="https://mlsi.in/"> Mount Litera School International, Mumbai </a>
         <a class="registration-link" href="https://drive.google.com/file/d/1dWYEJ_Q5wTYQytmDynOBLaxrH4Amonz_/view?usp=sharing"> View the CodeFest Orientation clip! </a>
         <a class="registration-link" href="https://forms.gle/vrWVe4FEg19njR5q8"> CLICK TO REGISTER NOW! </a>
       </p>
@@ -257,14 +258,7 @@
   <footer id="team" class="didact-gothic-regular">
     <h2 class="didact-gothic-regular">MEET THE TEAM</h2>
     <p>Website by: Team Nexus</p>
-    <p>Contact: <a href="mailto:codefest@example.com">nexus@mlsi.in</a></p>
-
-    <!-- Social Media Icons -->
-    <div class="social-icons">
-      <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://www.twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-    </div>
+    <p>Contact: <a href="mailto:nexus.codefest@mlsi.in">nexus.codefest@mlsi.in</a></p>
 
     <!-- Button to open Team Info and T&C pop-ups -->
     <p><a href="#team-modal" id="team-popup" class="popup-btn">See the Full Team</a></p>
