--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="team-member">
             <!-- <img src="assets/team-member2.jpg" alt="Team Member 2"> -->
             <p>Name: Pearl Parwani </p>
-            <p>Role: Head of Media </p>
+            <p>Role: Media Team </p>
           </div>
           <div class="team-member">
             <!-- <img src="assets/team-member2.jpg" alt="Team Member 2"> -->
